cli/tests/config.ts.out
[WILDCARD]Unsupported compiler options in "[WILDCARD]config.tsconfig.json"
  The following options were ignored:
    module, target
[WILDCARD]error TS2532: Object is possibly 'undefined'.

[WILDCARD]tests/config.ts:3:5

3 if (map.get("bar").foo) {
      ~~~~~~~~~~~~~~

